--- a/testprview.html
+++ b/testprview.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+<!-- This a test File-->    
 <div ng-app="">
     <p>Input something in the input box:</p>
     <p>Name: <input type="text" ng-model="name"></p>
-    <p ng-bind="name">Test</p>
+    <p ng-bind="name">Test NOW WE CHANGE THINGS</p>
 </div>
 </body>
 
